# QtWordReader

./: .gitignore  CMakeLists.txt  QtWordReader_global.h  QtWorderReader  README.md  WordReader.cpp  WordReader.h  main.cpp
